# rdfutils

./: .pylintrc  Containerfile  README  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
example/data/: index.ttl  test.nt
example/queries/: 10-partof.rq  20-haspart.rq
src/: cli.py  compile.py  utils.py
